--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.5.19",
-    "sass": "^1.87.0",
+    "sass": "1.32",
     "sass-loader": "^10.5.2",
     "vue-template-compiler": "^2.6.14"
   }
